# BaconSDK

./: .gitignore  CMakeLists.txt  Makefile  README.md  bacon.cc  bacon.h  bacon.py  bacon_cli.cc  bacon_sdk.py  bitarray.hpp  common.cc  common.h  improvement.md  performance.sh  platform.cc  platform.h  workerpool.hpp
